crates/strider-analyze/tests/snapshots/v3__aarch64__calling_convention__uses_return.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0xbf0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x12000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "8" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "8" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "8" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "10" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "14" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "14" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v17" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v17" [color="#888888", style=dashed];
  "v17" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "1" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "9" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "15" -> "9" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "v19" [label="Post Call\nx2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v19" [color="#888888", style=dashed];
  "v19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x14:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nx1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nx0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "21" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x12014:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "23" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "24" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v25" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v25" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "26" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v27" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v27" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
